--- a/Practicas/P3/libreria_estilo.css
+++ b/Practicas/P3/libreria_estilo.css
@@ -178,6 +178,7 @@ main{
 #catal_libros input{
     background-color: blue;
     border-color: blue;
+	color: white;
 }
 
 #catal_libros img{
@@ -202,13 +203,19 @@ main{
 
 #busqueda_libro{
     width: 800px;
-    height: 600px;
+    height: 469px;
     margin-right: 615px;
 }
 
-#busqueda_libro p:nth-child(6){
-    display: flex;
-    flex-direction: column;
+#busqueda_libro div label{
+    display: block;
+}
+
+#busqueda_libro input{
+    border-color: dodgerblue;
+    border-style: solid;
+    border-width: 3px;
+    background-color: white;
 }
 
 /* main de tienda.html */
@@ -261,9 +268,8 @@ main{
     color: dodgerblue;
 }
 
-#pedidos_form p:nth-child(7){
-    display: flex;
-    flex-direction: column;
+#pedidos_form form div label{
+    display: block;
 }
 
 #pedidos_form input,
@@ -284,4 +290,5 @@ main{
     height: 40px;
     display: block;
     margin: auto;
+    color: white;
 }
